# webpage

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: dataC1.json  dataC10.json  dataC11.json  dataC12.json  dataC13.json  dataC14.json  dataC15.json  dataC16.json  dataC17.json  dataC18.json  dataC19.json  dataC2.json  dataC20.json  dataC21.json  dataC22.json  dataC23.json  dataC24.json  dataC25.json  dataC26.json  dataC27.json  dataC3.json  dataC4.json  dataC5.json  dataC6.json  dataC7.json  dataC8.json  dataC9.json  dataP1.json
elecciones/: .gitignore  admin.py  models.py  urls.py  views.py
elecciones/migrations/: 0001_initial.py  0002_auto_20210312_0019.py  0002_remove_tablaedad_id.py  0003_auto_20210309_1831.py  0004_auto_20210309_1832.py  0006_delete_tablaedad.py
elecciones_peru/: .gitignore  Procfile  asgi.py  bien_mueble.csv  datos_personales.csv  dump_elecciones.sql  elecciones_peru - Acceso directo.lnk  manage.py  package-lock.json  requirements.txt  settings.py  urls.py  wsgi.py
elecciones_peru/datos/: bien_inmueble.csv  cargo_eleccion.csv  cargo_partidario.csv  datos_personales.csv  edad.csv  edu_basica.csv  estudio_no_univ.csv  estudio_post.csv  estudio_tec.csv  estudio_univers.csv  exp_lab.csv  finan_priv.csv  finan_pub.csv  info_adi.csv  ingreso.csv  org_poli.csv  sent_oblig.csv  sent_penal.csv
elecciones_peru/elecciones/: .gitignore  AUX.py  admin.py  apps.py  models.py  urls.py  views.py
elecciones_peru/elecciones_peru/: .gitignore  settings.py  urls.py
staticfiles/: staticfiles.json
templates/: 400.html  403.html
(+133 files in other folders)
